# GameProgrammingPlayground

./: .gitignore  CMakeLists.txt  GameProgrammingPlayground.sln
GameProgrammingPlayground/: GameProgrammingPlayground.vcxproj  GameProgrammingPlayground.vcxproj.filters  Main.cpp
GameProgrammingPlayground/Engine/Actors/: AbstractActorComponent.h  Actor.cpp  Actor.h  ActorFactory.cpp  ActorFactory.h  ActorTypes.h  TransformComponent.cpp  TransformComponent.h
GameProgrammingPlayground/Engine/Debugging/: Logger.h
GameProgrammingPlayground/Engine/EventManager/: EventManager.cpp  EventManager.h  Events.cpp  Events.h  IEventManager.h
GameProgrammingPlayground/Engine/Private/Actors/: Actor.cpp  ActorFactory.cpp  TransformComonent.cpp  TransformComponent.cpp
GameProgrammingPlayground/Engine/Public/Actors/: AbstractActorComponent.h  Actor.h  ActorComponentFactory.h  ActorFactory.h  ActorTypes.h  TransformComponent.h
GameProgrammingPlayground/Engine/Public/Debugging/: Logger.h
GameProgrammingPlayground/Engine/Utils/: Utils.h
GameProgrammingPlayground/Game/: GameLogic.cpp  GameLogic.h
GameProgrammingPlayground/Game/Private/: GameLogic.cpp
GameProgrammingPlayground/Game/Public/: GameLogic.h
GameProgrammingPlayground/Game/Resources/: Ball.json  Ball.xml  Level.xml  Wall.xml
